--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,21 @@
   box-sizing: border-box;
 }
 
+.cl_a{
+  font-weight: bold;
+  color: #f00;
+}
+
+.cl_b{
+  font-weight: bold;
+  color: #00f;
+}
+
+.cl_c{
+  font-weight: bold;
+  color: #f0f;
+}
+
 .keyboard_row{
   display: flex;
   user-select: none;
